--- a/templates/Factory/argocd-application-details.yaml
+++ b/templates/Factory/argocd-application-details.yaml
@@ -131,7 +131,11 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+                                  {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/apis/argoproj.io/v1alpha1/namespaces/{3}/applications/{6}"
+                                    ) | nindent 34
+                                  }}
+
                               # Annotations counter block
                               - type: antdFlex
                                 data:
