--- a/templates/Factory/serviceaccount-details.yaml
+++ b/templates/Factory/serviceaccount-details.yaml
@@ -1,16 +1,16 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: Factory
 metadata:
-  name: clusterrolebinding-details
+  name: serviceaccount-details
 spec:
-  key: clusterrolebinding-details
+  key: serviceaccount-details
   sidebarTags:
-    - clusterrolebinding-sidebar
+    - serviceaccount-sidebar
   withScrollableMainContentCard: true
   urlsToFetch:
-    - "/api/clusters/{2}/k8s/apis/rbac.authorization.k8s.io/v1/clusterrolebindings/{5}"
+    - "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/serviceaccounts/{6}"
 
-  # Header row with badge and clusterrolebinding name
+  # Header row with badge and serviceaccount name
   data:
     - type: antdFlex
       data:
@@ -20,12 +20,12 @@ spec:
         style:
           marginBottom: 24px
       children:
-        # Service badge
+        # serviceaccount badge
         - type: antdText
           data:
-            id: badge-service
-            text: RB
-            title: clusterrolebindings
+            id: badge-serviceaccount
+            text: S
+            title: serviceaccount
             style:
               fontSize: 20px
               lineHeight: 24px
@@ -36,26 +36,26 @@ spec:
               textAlign: center
               whiteSpace: nowrap
               color: "#fff"
-              backgroundColor: "#6ca100"
+              backgroundColor: "#c46100"
               fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
               fontWeight: 400
-        # Service name
+        # serviceaccount name
         - type: parsedText
           data:
-            id: service-name
+            id: header-serviceaccount-name
             text: "{reqsJsonPath[0]['.metadata.name']['-']}"
             style:
               fontSize: 20px
               lineHeight: 24px
               fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
 
-    # Tabs with Details, YAML, and Pods
+    # Tabs with Details and YAML
     - type: antdTabs
       data:
-        id: service-tabs
+        id: serviceaccount-tabs
         defaultActiveKey: "details"
         items:
-          # Details tab
+          # Details tab with metadata and spec info
           - key: "details"
             label: "Details"
             children:
@@ -65,29 +65,34 @@ spec:
                   style:
                     marginBottom: 24px
                 children:
+                  # Title
+                  - type: antdText
+                    data:
+                      id: details-title
+                      text: "ServiceAccount details"
+                      strong: true
+                      style:
+                        fontSize: 20
+                        marginBottom: 12px
+
+                  # Spacer
+                  - type: Spacer
+                    data:
+                      id: details-spacer
+                      "$space": 16
+
+                  # Two-column layout
                   - type: antdRow
                     data:
                       id: details-grid
                       gutter: [48, 12]
                     children:
-                      # Left column: metadata and config
+                      # Left column: metadata
                       - type: antdCol
                         data:
                           id: col-left
                           span: 12
                         children:
-                          - type: antdText
-                            data:
-                              id: details-title
-                              text: "clusterrolebinding details"
-                              strong: true
-                              style:
-                                fontSize: 20
-                                marginBottom: 12px
-                          - type: Spacer
-                            data:
-                              id: details-spacer
-                              "$space": 16
                           - type: antdFlex
                             data:
                               id: col-left-stack
@@ -111,6 +116,22 @@ spec:
                                       id: meta-name-value
                                       text: "{reqsJsonPath[0]['.metadata.name']['-']}"
 
+                              # Namespace link
+                              - type: antdFlex
+                                data:
+                                  id: meta-namespace-block
+                                  vertical: true
+                                  gap: 8
+                                children:
+                                  {{ include "incloud-web-resources.factory.links.details" (dict
+                                      "reqIndex" 0
+                                      "type" "namespace"
+                                      "title" "Namespace"
+                                      "jsonPath" ".metadata.namespace"
+                                      "factory" "namespace-details"
+                                    ) | nindent 34 
+                                  }}
+
                               # Labels
                               - type: antdFlex
                                 data:
@@ -119,9 +140,10 @@ spec:
                                   gap: 8
                                 children:
                                  {{ include "incloud-web-resources.factory.labels" (dict
-                                      "endpoint" "/api/clusters/{2}/k8s/apis/rbac.authorization.k8s.io/v1/clusterrolebindings/{5}"
+                                      "endpoint" "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/serviceaccounts/{6}"
                                     ) | nindent 34
                                   }}
+
 
                               # Annotations counter block
                               - type: antdFlex
@@ -147,10 +169,10 @@ spec:
                                   {{ include "incloud-web-resources.factory.time.create" (dict
                                     "req" ".metadata.creationTimestamp"
                                     "text" "Created"
-                                    ) | nindent 34
+                                  ) | nindent 38
                                   }}
 
-                              # Owner
+                              # Owner block
                               - type: antdFlex
                                 data:
                                   id: meta-owner-block
@@ -168,92 +190,24 @@ spec:
                                       gap: 6
                                       align: center
                                     children:
-                                      - type: antdText
+                                      - type: parsedText
                                         data:
-                                          id: meta-owner-fallback
+                                          id: owner-value
+                                          strong: true
                                           text: "No owner"
                                           style:
-                                            color: "#FF0000"
-
-          
-                      # Left column: metadata and config
-                      - type: antdCol
-                        data:
-                          id: col-left
-                          span: 12
-                        children:
-                          - type: antdText
-                            data:
-                              id: details-title
-                              text: "Role details"
-                              strong: true
-                              style:
-                                fontSize: 20
-                                marginBottom: 12px
-                          - type: Spacer
-                            data:
-                              id: details-spacer
-                              "$space": 16
-                          - type: antdFlex
-                            data:
-                              id: col-left-stack
-                              vertical: true
-                              gap: 24
-                            children:
-                              # Name block
-                              - type: antdFlex
-                                data:
-                                  id: meta-name-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  # TODO не работает корректно
-                                  - type: VisibilityContainer
-                                    data:
-                                      id: conditions-visibility
-                                      value: "{reqsJsonPath[0]['.roleRef.kind']['-']}"
-                                      style:
-                                        margin: 0
-                                        padding: 0
-                                      children:
-                                        {{ include "incloud-web-resources.factory.links.details" (dict
-                                            "reqIndex" 0
-                                            "type" "role"
-                                            "title" "TODO"
-                                            "namespace" "{reqsJsonPath[0]['.metadata.namespace']}"
-                                            "jsonPath" ".roleRef.name"
-                                            "factory" "role-details"
-                                          ) | nindent 40 
-                                        }}
-
-                                  # TODO не работает корректно
-                                  - type: VisibilityContainer
-                                    data:
-                                      id: conditions-visibility
-                                      value: "{reqsJsonPath[0]['.roleRef.kind']['-']}"
-                                      style:
-                                        margin: 0
-                                        padding: 0
-                                      children:
-                                        {{ include "incloud-web-resources.factory.links.details" (dict
-                                            "reqIndex" 0
-                                            "type" "cluster-role"
-                                            "title" "ClusterRole"
-                                            "jsonPath" ".roleRef.name"
-                                            "factory" "clusterrole-details"
-                                          ) | nindent 40 
-                                        }}
+                                            color: red
 
           # YAML tab
-          - key: "yaml"
-            label: "YAML"
+          - key: yaml
+            label: YAML
             children:
               - type: YamlEditorSingleton
                 data:
                   id: yaml-editor
                   cluster: "{2}"
                   isNameSpaced: true
-                  type: "builtin"
-                  typeName: clusterrolebindings
+                  type: builtin
+                  typeName: serviceaccounts
                   prefillValuesRequestIndex: 0
                   substractHeight: 400
