--- a/templates/Factory/daemonset-details.yaml
+++ b/templates/Factory/daemonset-details.yaml
@@ -148,7 +148,10 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 34}}
+                                 {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/apis/apps/v1/namespaces/{3}/daemonsets/{6}"
+                                    ) | nindent 34
+                                  }}
 
                               # Node selector block
                               - type: antdFlex
