--- a/templates/Factory/job-details.yaml
+++ b/templates/Factory/job-details.yaml
@@ -160,7 +160,10 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 34 }}
+                                 {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/apis/batch/v1/namespaces/{3}/jobs/{6}"
+                                    ) | nindent 34
+                                  }}
 
                               # Annotations counter block
                               - type: antdFlex
