--- a/templates/Factory/pod-details.yaml
+++ b/templates/Factory/pod-details.yaml
@@ -160,7 +160,10 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 38}}
+                                  {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/pods/{6}"
+                                    ) | nindent 34
+                                  }}
 
                               # Node selector chips (kept as include)
                               - type: antdFlex
@@ -189,6 +192,27 @@ spec:
                                       "title" "Tolerations"
                                     ) | nindent 34
                                   }}
+                                  - type: Tolerations
+                                    data:
+                                      id: tolerations
+                                      reqIndex: 0
+                                      jsonPathToArray: '.spec.tolerations'
+                                      text: "~counter~ Tollerations"
+                                      errorText: "0 Tollerations"
+                                      notificationSuccessMessage: "Updated successfully"
+                                      notificationSuccessMessageDescription: "Tollerations have been updated"
+                                      modalTitle: "Edit tolerations"
+                                      modalDescriptionText: ""
+                                      inputLabel: ""
+                                      endpoint: /api/clusters/{2}/k8s/api/v1/namespaces/{3}/pods/{6}
+                                      pathToValue: "/spec/tolerations"
+                                      editModalWidth: "1000px"
+                                      cols:
+                                        - 8
+                                        - 3
+                                        - 7
+                                        - 4
+                                        - 2
 
                               # Annotations counter block
                               - type: antdFlex
