--- a/templates/Factory/replicationcontroller-details.yaml
+++ b/templates/Factory/replicationcontroller-details.yaml
@@ -139,7 +139,10 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+                                 {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/replicationcontrollers/{6}"
+                                    ) | nindent 34
+                                  }}
 
                               # Node selector
                               - type: antdFlex
