--- a/templates/Factory/secret-details.yaml
+++ b/templates/Factory/secret-details.yaml
@@ -139,7 +139,10 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 38}}
+                                 {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/secrets/{6}"
+                                    ) | nindent 34
+                                  }}
 
                               # Annotations counter block
                               - type: antdFlex
