--- a/templates/Factory/service-details.yaml
+++ b/templates/Factory/service-details.yaml
@@ -134,7 +134,10 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.labels" . | nindent 34}}
+                                 {{ include "incloud-web-resources.factory.labels" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/services/{6}"
+                                    ) | nindent 34
+                                  }}
 
                               # Pod selector
                               - type: antdFlex
